corrected overflow unset (incompatibility with IE)

--- a/css/core/_nav.scss
+++ b/css/core/_nav.scss
@@ -4,7 +4,7 @@
     z-index: 10;
 
     ul {
-        overflow: unset;
+        overflow: visible;
         padding: 0;
 
         ul {
